<resources>
    <string name="app_name">Torgon-Notes</string>
    <string name="action_settings">Settings</string>

    <string name="create_note">Create Note</string>
    <string name="topic">Enter Topic</string>
    <string name="enter_title">Enter Title</string>
    <string name="save_note">save</string>
    <string name="enter_details">Enter Details</string>
    <string name="add_notes">Add Notes</string>
    <string name="creater_zanhd">Creater : zanhd</string>
    <string name="date_added">Date Added</string>
    <string name="update_note">Update Note</string>
    <string name="update">update</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
</resources>