<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/create_note_text"
                android:padding="10dp"
                android:text="@string/create_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="italic|bold"/>

            <EditText
                android:id="@+id/title_editview"
                android:paddingTop="15dp"
                android:layout_below="@+id/create_note_text"
                android:hint="@string/enter_title"
                android:textStyle="italic|bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/details_editview"
                android:layout_below="@+id/title_editview"
                android:paddingTop="15dp"
                android:hint="@string/enter_details"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_below="@+id/details_editview"
                android:text="@string/save_note"
                android:textSize="15sp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>